--- a/index.html
+++ b/index.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD130 | Home</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <nav>
-        <a href="wwr/index.html">White Water Rafting Website</a>
-        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-        <a href="positioning.html">Positioning Activity</a>
-        <a href="#">Personal Website</a>
-        <a href="#">Personal Siteplan</a>
-    </nav>     
+    <header>
+        <nav>
+            <a href="wwr/index.html">White Water Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="positioning.html">Positioning Activity</a>
+            <a href="#">Personal Website</a>
+            <a href="#">Personal Siteplan</a>
+        </nav>
+    </header>
+    <main>     
     <h1>Gideon Kwon</h1>
     <img src = "20190419_180311.jpg" alt="It was when I was on my mission." width="300">
     <p>I am from South Korea. I am 25 years old. I served my mission in Melbourne Australia. I have been here in BYUI for about 2 years now.</p>
-    <p>I like to cook and to work out as much as I can.</p>
+    <p>I like to cook and to work out!</p>
+    </main>
+    <footer>
+        <p>Copyright 2024 - Gideon Kwon - <a href="https://churchofjesuschrist.org">Favorite site</a></p>
+    </footer>
 </body>
 </html>
