--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting vacations | Dry Oar Boating | Home</title>
-    
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <div id="content">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
@@ -57,7 +58,7 @@
         </section>
     </main>
     <footer>
-        <h3>Dry Oar &copy; 2022 - Hyeonho, Jeong</h3>
+        <h3>Dry Oar &copy; 2024 - Gideon Kwon</h3>
         <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
         <h3><a href="contactus.html">Contact Us</a></h3>
         
@@ -73,5 +74,6 @@
             </a>
         </div>
     </footer>
+</div>
 </body>
 </html>
