about me paragraph update

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <a href="wwr/index.html">White Water Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
             <a href="positioning.html">Positioning Activity</a>
+            <a href="#">About Me</a>
             <a href="#">Personal Website</a>
             <a href="pueblos magicos/site-plan.html">Personal Siteplan</a>
         </nav>
@@ -19,8 +20,13 @@
     <main>     
     <h1>Gideon Kwon</h1>
     <img src = "20190419_180311.jpg" alt="It was when I was on my mission." width="300">
-    <p>I am from South Korea. I am 25 years old. I served my mission in Melbourne Australia. I have been here in BYUI for about 2 years now.</p>
-    <p>I like to cook and to work out!</p>
+    <p>
+        Hello world! My name is Gideon! My real name in Korean is Giseok, but for convinience I prefer Gideon.<br>
+        Here are some basic background information about me.<br>
+        I am from Ilsan, South Korea which is a city right next to Seoul.<br>
+        I was born in May 1998, so I am 25 years old. I will be turning 26 this year.<br>
+        I served my mission in Melbourne Australia. Now I am a sophomore in computer science.<br>
+    I love cooking, working out, listening to good music, and watching anime</p>
     </main>
     <footer>
         <p>Copyright 2024 - Gideon Kwon - <a href="https://churchofjesuschrist.org">Favorite site</a></p>
