personal site plan updated (paragraph/images)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>     
     <h1>Gideon Kwon</h1>
-    <img src = "20190419_180311.jpg" alt="It was when I was on my mission." width="300">
+    <img src = "images/20190419_180311.jpg" alt="It was when I was on my mission." width="300">
     <p>
         Hello world! My name is Gideon! My real name in Korean is Giseok, but for convinience I prefer Gideon.<br>
         Here are some basic background information about me.<br>
