--- a/pueblos magicos/site-plan.html
+++ b/pueblos magicos/site-plan.html
@@ -21,8 +21,8 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>The purpose of this website is to get attention from the audience and introduce some of the magical towns in Mexico. <br>
-        Through this website the audience will be educated more about Mexican culture and be interested in traveling Mexico or just traveling in general.
+      <p>The purpose of this website is to introduce magical towns (pueblos magicos) in Mexico and make the audience interested in them.<br>
+        Through this website the audience will learn about the magical towns, Mexican culture, and be interested in traveling Mexico.
         </p>  <!-- change this -->
 
 
@@ -68,13 +68,23 @@
         Normal paragraph example
       </h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        What do you expect the most when you are traveling somewehre new? Are you expecting to experience completely new taste and food? 
+        Are you expecting to see something you have never seen before? Are you expecting to be immersed in the culture that is totally different then yours? 
+        Whatever the answers would be, I would like to suggest that people want magical experiences in their life, especially when travelinig new places.
+        Pueblos Magicos have all the answers for you! These magical towns located all around Mexico will bring magic in your life.
+        You will see something you have not seen before, you will experience new taste, and you will fall in love with the cultures that woven into the town and people's lives.
+        We are just here to help you get there.
       </p>
       <h3>
         Colored paragraph example
       </h3>
       <p class="colored">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+        What do you expect the most when you are traveling somewehre new? Are you expecting to experience completely new taste and food? 
+        Are you expecting to see something you have never seen before? Are you expecting to be immersed in the culture that is totally different then yours? 
+        Whatever the answers would be, I would like to suggest that people want magical experiences in their life, especially when travelinig new places.
+        Pueblos Magicos have all the answers for you! These magical towns located all around Mexico will bring magic in your life.
+        You will see something you have not seen before, you will experience new taste, and you will fall in love with the cultures that woven into the town and people's lives.
+        We are just here to help you get there.
       </p>
 
       <!-- ------------------------Step 10------------------------------ -->
@@ -121,30 +131,27 @@
         Content
       </h2>
       <h3>Home page</h3>
-      <p>
-        [Written copy for the home page here]
-      </p>
+      <p></p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/sayulita.jpg" alt="image for homepage" width="400">
+        <img src="images/home.png" alt="image for homepage" width="150">
 
       </ul>
-      <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+
       </p>
+      <h3>Roads to Magic</h3>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/batopilas.jpg" alt="image for page" width="400">
+        <img src="images/maps.png" alt="image for page" width=150">
 
       </ul>
-      <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
       </p>
+      <h3>Information</h3>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/tequila2.jpg" alt="image for page3" width="400">
+        <img src="images/information.png" alt="image for page3" width="150">
 
       </ul>
       <hr>
