text for contect updated

--- a/pueblos magicos/site-plan.html
+++ b/pueblos magicos/site-plan.html
@@ -131,27 +131,31 @@
         Content
       </h2>
       <h3>Home page</h3>
-      <p></p>
+      <p>
+        Welcome to Pueblos Magicos!
+        Come and experience magic.
+      </p>
       <p>Images for the Home page</p>
         <img src="images/sayulita.jpg" alt="image for homepage" width="400">
         <img src="images/home.png" alt="image for homepage" width="150">
 
       </ul>
-      <p>
-
-      </p>
       <h3>Roads to Magic</h3>
+      <p>
+        Where and how to get to the magical experiences?
+      </p>
       <p>Images for the Page 2</p>
-        <img src="images/batopilas.jpg" alt="image for page" width="400">
-        <img src="images/maps.png" alt="image for page" width=150">
+        <img src="images/batopilas.jpg" alt="image for page 2" width="400">
+        <img src="images/maps.png" alt="image for page 2" width=150">
 
       </ul>
-      <p>
-      </p>
       <h3>Information</h3>
+      <p>
+        What can you expect to see and experience?
+      </p>
       <p>Images for the Page 3</p>
-        <img src="images/tequila2.jpg" alt="image for page3" width="400">
-        <img src="images/information.png" alt="image for page3" width="150">
+        <img src="images/tequila2.jpg" alt="image for page 3" width="400">
+        <img src="images/information.png" alt="image for page 3" width="150">
 
       </ul>
       <hr>
