--- a/pueblos magicos/site-plan.html
+++ b/pueblos magicos/site-plan.html
@@ -167,21 +167,24 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        little dots on the image means different images that can be scrolled.<br> 
+        My home page will portrait as many images as possible so it can attract more people to this website.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Screenshot (86).png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Maps</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        This page will show the map of the locations to the magical towns in Mexico.
+        <br>If a user puts mouse cursor on a magical town, it will make the town bigger to show which town it is.<br>
+        It will also show the image and name of the town with a link to more information.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Screenshot (87).png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Information</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        This page will give all the information to what a visiter can do in each town. It will also give information and links to each activity.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/Screenshot (88).png" alt="page 3 wireframe">
     </main>
   </body>
 
