personal site done

--- a/wwr/reservation.html
+++ b/wwr/reservation.html
@@ -122,12 +122,15 @@
         </p>
     </div>
     <div class="location">
-        <p>|     MAP     |</p>
-        <img src="images/Rafting-Overview-Map.gif" height="400" class="map">
+        <p>
+            -Map-
+            <br>This is a map to some of our white water rafting activities.
+        </p>
+        <img src="images/Rafting-Overview-Map.gif" class="map">
         
-        <p class="safety1">|     Safety     |
+        <p>-Safety-
             <br>Safety training takes about 30 minutes to 45 minutes.<br>     All participants are required to receive this traiging before the activity.</p>
-        <img src="images/1797--plovaci-vesta-hiko-x-treme-rent-harness2.jpg" width="400" class="safety">
+        <img src="images/1797--plovaci-vesta-hiko-x-treme-rent-harness2.jpg" class="safety">
     </div>
     <div>
     </div>
