--- a/pueblos magicos/info.html
+++ b/pueblos magicos/info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pueblos Magicos | Home</title>
+    <title>Pueblos Magicos | information</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -20,17 +20,14 @@
         </header>
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/tequila2.jpg" alt="street of Batopilas">
+                <img id="hero-img" src="images/tequila2.jpg" alt="street of tequila">
             </div>
             <section id="hero-msg">
-                <h1 class="home-title">Welcome to Pueblos Magicos!</h1>
-                <h4>Come and experience magic!</h4>
+                <h1 class="info-title">Information</h1>
+                <h4>What can you see and experience?</h4>
             </section>
         </div>
-        <main class="home-grid">
-            <section class="Oaxaca">
-                
-            </section>
+        <main class="info-grid">
 
         </main>
         <footer>
