--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <a href="wwr/index.html">White Water Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
             <a href="positioning.html">Positioning Activity</a>
-            <a href="#">About Me</a>
-            <a href="#">Personal Website</a>
+            <a href="index.html">About Me</a>
+            <a href="pueblos magicos/index.html">Personal Website</a>
             <a href="pueblos magicos/site-plan.html">Personal Siteplan</a>
         </nav>
     </header>
