--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
             <a href="positioning.html">Positioning Activity</a>
             <a href="index.html">About Me</a>
-            <a href="pueblos magicos/index.html">Personal Website</a>
-            <a href="pueblos magicos/site-plan.html">Personal Siteplan</a>
+            <a href="pueblos_magicos/index.html">Personal Website</a>
+            <a href="pueblos_magicos/site-plan.html">Personal Siteplan</a>
         </nav>
     </header>
     <main>     
