--- a/pueblos_magicos/index.html
+++ b/pueblos_magicos/index.html
@@ -24,11 +24,29 @@
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Welcome to Pueblos Magicos!</h1>
+            </section>
+            <section id="hero-quote">
                 <h4>Come and experience magic!</h4>
             </section>
         </div>
-        <main class="home-grid">
 
+
+        <main class="home-grid">
+            <section class="inmap-photo1">
+                <img class="huasca" src="images/huasc-de-ocampo3.JPG" alt="huasca de ocampo">
+            </section>
+            <section class="inmap-photo2">
+                <img class="huasca" src="images/huasc-de-ocampo4.JPG" alt="huasca de ocampo">
+            </section>
+            <section class="inmap-photo3">
+                <img class="huasca" src="images/huasc-de-ocampo5.JPG" alt="huasca de ocampo">
+            </section>
+            <section class="inmap-photo4">
+                <img class="huasca" src="images/huasc-de-ocampo2.JPG" alt="huasca de ocampo">
+            </section>
+            <section class="inmap-photo5">
+                <img class="huasca" src="images/huasc-de-ocampo6.JPG" alt="huasca de ocampo">
+            </section>
         </main>
         <footer>
             <h3>Pueblos Magicos &copy; 2024 - Gideon Kwon</h3>
