main page updated

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     </header>
     <main>     
     <h1>Gideon Kwon</h1>
-    <img src = "images/20190419_180311.jpg" alt="It was when I was on my mission." width="300">
+    <img src = "images/IMG-2794.JPG" alt="It was when I was on my mission.">
     <p>
-        Hello world! My name is Gideon! My real name in Korean is Giseok, but for convinience I prefer Gideon.<br>
+        Hello world! My name is Gideon! My real name in Korean is Giseok,
+         but for convinience I prefer Gideon.<br>
         Here are some basic background information about me.<br>
         I am from Ilsan, South Korea which is a city right next to Seoul.<br>
         I was born in May 1998, so I am 25 years old. I will be turning 26 this year.<br>
