flipcard link updated

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="index.html">About Me</a>
             <a href="pueblos_magicos/index.html">Personal Website</a>
             <a href="pueblos_magicos/site-plan.html">Personal Siteplan</a>
+            <a href="flipcard/flipcard.html">Flipcard</a>
         </nav>
     </header>
     <main>     
