footer design fixed

--- a/pueblos_magicos/index.html
+++ b/pueblos_magicos/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div id="top_menu">
+    <div id="content">
         
         <header>
             <a id="logo_link" href="index.html">
