error fixing mid

--- a/pueblos_magicos/index.html
+++ b/pueblos_magicos/index.html
@@ -23,7 +23,7 @@
             </nav>
         </header>
 
-        <div class="slideshow-container">
+        <div class="slideshow-container" id="slide-con">
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
@@ -94,6 +94,5 @@
         </footer>
 
     </div>
-    
 </body>
 </html>
