--- a/pueblos_magicos/maps.html
+++ b/pueblos_magicos/maps.html
@@ -10,7 +10,7 @@
     <div id="top_menu">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/pueblos magicos-logos.jpeg" alt="PM logo" width="100">
+                <img class="logo" src="images/pueblos-magicos-logos.jpeg" alt="PM logo" width="100">
             </a>
             <nav>
                 <a href="index.html">Home</a>
