errors fixed for index and info js

--- a/pueblos_magicos/info.html
+++ b/pueblos_magicos/info.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pueblos Magicos | information</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <script src="infotab.js"></script>
+    <script src="infotab.js" defer></script>
 </head>
 <body>
     <div id="content">
@@ -53,23 +53,23 @@
             </p>
           </div>
         </main>
+
         <footer>
-            
-        <h3>Pueblos Magicos &copy; 2024 - Gideon Kwon</h3>
-        <h3><a href="site-plan.html">Site Plan</a></h3>
-        <h3><a href="info.html">Information</a></h3>
+            <h3>Pueblos Magicos &copy; 2024 - Gideon Kwon</h3>
+            <h3><a href="site-plan.html">Site Plan</a></h3>
+            <h3><a href="info.html">Information</a></h3>
         
-        <div class="social">
-            <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
-        </div>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
         </footer>
 
     </div>
